--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhenxiang.blur.BlurFrameLayout
+<com.zhenxiang.blur.WindowBlurFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,4 +16,4 @@
         android:layout_gravity="center"
         android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />
 
-</com.zhenxiang.blur.BlurFrameLayout>
+</com.zhenxiang.blur.WindowBlurFrameLayout>
